# npm-cli

./: .gitignore  CLI_DESIGN.md  README.md  openapi-schema.json  pyproject.toml
src/npm_cli/: __init__.py  client.py  config.py  main.py  output.py
